Fix calculation of Password Generation popup.

A width of |password_view_| was not taken into consideration for calculation of width of Password Generation popup. Screenshoots how it looks like before and after fixes are on the bug.

This CL introduces, that width of Password Generation popup should be at least width of |password_view_| + borders.

BUG=707253

Review-Url: https://codereview.chromium.org/2790953002
Cr-Commit-Position: refs/heads/master@{#461415}

Former-commit-id: f49d5b25ff568f099280ac9c285638f86efa7ea8